login and authentication added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-sidebar
+<!-- <app-sidebar
   [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
   (changeIsLeftSidebarCollapsed)="changeIsLeftSidebarCollapsed($event)"
 />
@@ -10,4 +10,6 @@
 />
 
 <app-footer   [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
-  [screenWidth]="screenWidth()" ></app-footer>
+  [screenWidth]="screenWidth()" ></app-footer> -->
+
+  <router-outlet></router-outlet>
