--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -8,18 +8,16 @@
   transform-style: preserve-3d;
     max-width: 450px;
 }
-
+/* 
 .login_card.flip {
   transform: rotateY(180deg);
 }
 
-/* Front and back faces */
+
 .card-front, .card-back {
-  backface-visibility: hidden; /* prevents text flipping */
+  backface-visibility: hidden; 
   -webkit-backface-visibility: hidden;
-  /* position: absolute;
-  top: 0;
-  left: 0; */
+
   width: 100%;
   height: 100%;
 }
@@ -29,16 +27,15 @@
 }
 
 
-/* Flip animation class */
 .flip-scale-2-ver-right {
   -webkit-animation: flip-scale-2-ver-right 0.6s linear both;
           animation: flip-scale-2-ver-right 0.6s linear both;
-  backface-visibility: hidden;       /* stop text from flipping mirrored */
+  backface-visibility: hidden;      
   -webkit-backface-visibility: hidden;
-  transform-style: preserve-3d;      /* ensure 3D space */
+  transform-style: preserve-3d;    
 }
 
-/* Keyframes */
+
 @-webkit-keyframes flip-scale-2-ver-right {
   0% {
     -webkit-transform: translateX(0) rotateY(0) scale(1);
@@ -80,7 +77,14 @@
   }
 }
 
+ */
 
 
 
 
+
+
+
+
+
+ 
