--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -2,13 +2,9 @@
 
     <div class="d-flex align-items-center justify-content-center vh-100 login_wrapper ">
     <div class="card shadow-lg p-4 rounded-4 w-100 login_card "  [ngClass]="{'flip-scale-2-ver-right': admin}" >
-  
-    
-      <div class="card-front">
-           <!-- Header -->
-           <h2 class="text-center fw-bold mb-4 text-dark">📚 Library Login</h2>
-         
-    <!-- Role Toggle --> {{admin}}
+     <h2 class="text-center fw-bold mb-4 text-dark">📚 Library Login</h2>
+
+        <!-- Role Toggle -->
     <div class="mb-3 text-center">
       <div class="btn-group" role="group" aria-label="Role selection">
         <input type="radio" class="btn-check" name="role" id="user"  (click)="redirectTo('user')"  autocomplete="off" checked>
@@ -19,14 +15,21 @@
       </div>
     </div>
 
-    <!-- Login Form -->
-    <form [formGroup]="loginForm">
+       @if(!admin)
+       {
+          
+      <div class="card-front">
+           <!-- Header -->
+        
+
+    <!-- Login Form User -->
+    <form [formGroup]="userLoginForm">
       <!-- Email -->
       <div class="mb-3">
         <label for="email" class="form-label fw-semibold">Email</label>
         <input type="text" class="form-control rounded-3" id="email" formControlName="email" placeholder="Enter your email"
-        [ngClass]="{'is-invalid':loginForm?.get('email')?.invalid && (loginForm?.get('email')?.touched || loginForm?.get('email')?.dirty)  }">
-          @if (loginForm?.get('email')?.invalid && loginForm?.get('email')?.touched ) {
+        [ngClass]="{'is-invalid':userLoginForm?.get('email')?.invalid && (userLoginForm?.get('email')?.touched || userLoginForm?.get('email')?.dirty)  }">
+          @if (userLoginForm?.get('email')?.invalid && userLoginForm?.get('email')?.touched ) {
                 <div class="text-danger"> Required </div>
                 }
       </div>
@@ -35,8 +38,8 @@
       <div class="mb-3">
         <label for="password" class="form-label fw-semibold">Password</label>
         <input type="password" class="form-control rounded-3" id="password" formControlName="password" placeholder="Enter your password"
-         [ngClass]="{'is-invalid':loginForm?.get('password')?.invalid && (loginForm?.get('password')?.touched || loginForm?.get('password')?.dirty)  }">
-             @if (loginForm?.get('password')?.invalid && loginForm?.get('password')?.touched ) {
+         [ngClass]="{'is-invalid':userLoginForm?.get('password')?.invalid && (userLoginForm?.get('password')?.touched || userLoginForm?.get('password')?.dirty)  }">
+             @if (userLoginForm?.get('password')?.invalid && userLoginForm?.get('password')?.touched ) {
                 <div class="text-danger"> Required </div>
                 }
         </div>
@@ -50,12 +53,102 @@
       <button type="submit" class="btn btn-primary w-100 rounded-3 fw-bold">Login</button>
     </form>
     </div>
+       }
+  
      <!-- BACK SIDE -->
-    <div class="card-back d-flex flex-column align-items-center justify-content-center">
-      <h2 class="fw-bold text-dark">🔑 Admin Login</h2>
-      <p class="text-muted">Now you’re logging in as <b>Admin</b>.</p>
-      <button class="btn btn-primary" (click)="redirectTo('user')">back</button>
-    </div>
+      @if(admin )
+      {
+        <div class="card-back d-flex flex-column align-items-center justify-content-center">
+          <h2 class="fw-bold text-dark">🔑 Admin Login</h2>
+        <!-- Login Form Admin -->
+          @if(admin && loginForm){
+
+   <form [formGroup]="adminLoginForm">
+     
+      <!-- Email -->
+      <div class="mb-3">
+        <label for="email" class="form-label fw-semibold">Email</label>
+        <input type="text" class="form-control rounded-3" id="email" formControlName="email" placeholder="Enter your email"
+        [ngClass]="{'is-invalid':adminLoginForm?.get('email')?.invalid && (adminLoginForm?.get('email')?.touched || adminLoginForm?.get('email')?.dirty)  }">
+          @if (adminLoginForm?.get('email')?.invalid && adminLoginForm?.get('email')?.touched ) {
+                <div class="text-danger"> Required </div>
+                }
+      </div>
+
+      <!-- Password -->
+      <div class="mb-3">
+        <label for="password" class="form-label fw-semibold">Password</label>
+        <input type="password" class="form-control rounded-3" id="password" formControlName="password" placeholder="Enter your password"
+         [ngClass]="{'is-invalid':adminLoginForm?.get('password')?.invalid && (adminLoginForm?.get('password')?.touched || adminLoginForm?.get('password')?.dirty)  }">
+             @if (adminLoginForm?.get('password')?.invalid && adminLoginForm?.get('password')?.touched ) {
+                <div class="text-danger"> Required </div>
+                }
+        </div>
+
+      <!-- Forgot Password -->
+      <div class="d-flex justify-content-between mb-3">
+        <a href="#" class="small text-decoration-none text-primary">Forgot Password?</a>
+      </div>
+
+      <!-- Login Button -->
+       <div class="row">
+        <div class="col-md-6">
+          <button type="submit" class="btn btn-primary w-100 rounded-3 fw-bold" (click)="loginAsAdmin()">Login</button>
+         </div>
+        <div class="col-md-6">
+            <button type="button" class="btn btn-secondary rounded-3 fw-light" (click)="gotoSignupForm()">SignUp</button>
+        </div>
+       </div>
+    </form>
+
+          }
+          @else {
+              <form [formGroup]="adminSignUpForm">
+      <!-- Name -->
+      <div class="mb-3">
+        <label for="email" class="form-label fw-semibold">Name</label>
+        <input type="text" class="form-control rounded-3" id="name" formControlName="name" placeholder="Enter your name"
+        [ngClass]="{'is-invalid':adminSignUpForm?.get('name')?.invalid && (adminSignUpForm?.get('name')?.touched || adminSignUpForm?.get('name')?.dirty)  }">
+          @if (adminSignUpForm?.get('name')?.invalid && adminSignUpForm?.get('name')?.touched ) {
+                <div class="text-danger"> Required </div>
+                }
+      </div>
+      <!-- Email -->
+      <div class="mb-3">
+        <label for="email" class="form-label fw-semibold">Email</label>
+        <input type="text" class="form-control rounded-3" id="email" formControlName="email" placeholder="Enter your email"
+        [ngClass]="{'is-invalid':adminSignUpForm?.get('email')?.invalid && (adminSignUpForm?.get('email')?.touched || adminSignUpForm?.get('email')?.dirty)  }">
+          @if (adminSignUpForm?.get('email')?.invalid && adminSignUpForm?.get('email')?.touched ) {
+                <div class="text-danger"> Required </div>
+                }
+      </div>
+
+      <!-- Password -->
+      <div class="mb-3">
+        <label for="password" class="form-label fw-semibold">Password</label>
+        <input type="password" class="form-control rounded-3" id="password" formControlName="password" placeholder="Enter your password"
+         [ngClass]="{'is-invalid':adminSignUpForm?.get('password')?.invalid && (adminSignUpForm?.get('password')?.touched || adminSignUpForm?.get('password')?.dirty)  }">
+             @if (adminSignUpForm?.get('password')?.invalid && adminSignUpForm?.get('password')?.touched ) {
+                <div class="text-danger"> Required </div>
+                }
+        </div>
+
+      <!-- Forgot Password -->
+      <div class="d-flex justify-content-between mb-3">
+        <a href="#" class="small text-decoration-none text-primary">Forgot Password?</a>
+      </div>
+
+      <!-- Login Button -->
+      <button type="submit" class="btn btn-primary w-100 rounded-3 fw-bold" (click)="adminSignUp()">Create Account</button>
+    </form>
+
+          }
+  
+
+
+
+        </div>
+      }
     </div>
   
 </div>
