--- a/src/app/admin-component/roomconfiguration/roomconfiguration.component.html
+++ b/src/app/admin-component/roomconfiguration/roomconfiguration.component.html
@@ -1,14 +1,7 @@
 
 <div class="container">
     <form [formGroup]="roomConfigForm"> 
-         <div class="row d-flex justify-content-center text-center ">
-            <div class="col-md-4">
-                  <label>Libraary Name <span class="text-danger">*</span></label>
-                <input type="text" class="form-control" formControlName="libraryName" [ngClass]="{'is-invalid': roomConfigForm?.get('libraryName')?.invalid && (roomConfigForm?.get('libraryName')?.touched || roomConfigForm?.get('libraryName')?.dirty )} " />
-                @if (roomConfigForm?.get('libraryName')?.invalid && roomConfigForm?.get('libraryName')?.touched ) {
-                <div class="text-danger"> Required </div>
-                } </div>
-         </div>
+         
         <div class="row mb-3">
             <!-- Room Name  -->
             <div class="col-md-4">
@@ -40,7 +33,13 @@
                 }
 
             </div>
+          <div class="col-md-3">
 
+              <button type="button" class="btn btn-primary" (click)="saveRoom()">Save Room</button>
+          </div>  
+<div class="col-md-3">
+                <button type="button" class="btn btn-success" (click)="addSeat()">+ Add Seat</button>
+</div>
 
         </div>
         <div formArrayName="seatLayout">
@@ -66,8 +65,9 @@
             </div>
         </div>
         <div class="text-center">
-            <button type="button" class="btn btn-success" (click)="addSeat()">+ Add Seat</button>
-            <button type="button" class="btn btn-primary" (click)="saveRoom()">Save Room</button>
+            <!-- <button type="button" class="btn btn-success" (click)="addSeat()">+ Add Seat</button> -->
+            <!-- <button type="button" class="btn btn-primary" (click)="saveRoom()">Save Room</button> -->
+            <button type="button" class="btn btn-primary" (click)="saveSeats()">Save Seat</button>
         </div>
     </form>
 </div>
