room config change

--- a/src/app/admin-component/add-library/add-library.component.html
+++ b/src/app/admin-component/add-library/add-library.component.html
@@ -23,7 +23,7 @@
          </form>
     
 @if (isLibraryCreated) {
-  <app-roomconfiguration [libraryId]="selectedLibraryId"></app-roomconfiguration>
+  <app-add-room [libraryId]="selectedLibraryId"></app-add-room>
 }
 
       
