--- a/src/styles.css
+++ b/src/styles.css
@@ -159,6 +159,23 @@ label{
 }
 
 
+/* accordian */
 
+.accordion-button::after {
+  transform: rotate(270deg) !important;
+}
+.accordion-button:not(.collapsed)::after{
+      transform: rotate(0deg) !important;
+}
+
+.accordion-item{
+  box-shadow: 0px -2px 13px #dadada !important; 
+}
+
+.accordion-button:focus {
+  z-index: auto; 
+  outline: none;   
+  box-shadow: none !important;
+}
 
 
