--- a/src/app/admin-component/add-plan/add-plan.component.html
+++ b/src/app/admin-component/add-plan/add-plan.component.html
@@ -6,20 +6,47 @@
     <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
      <form [formGroup]="addplanForm">
         <div class="row">
+            <!-- library list -->
+            <div class="col-md-6 my-2">
+                <label>Library Name <span class="text-danger">*</span></label>
+              <select class="form-select" formControlName="libraryId"  (change)="getLibPlan($event)"
+               [ngClass]="{'is-invalid':addplanForm?.get('libraryId')?.invalid && (addplanForm?.get('libraryId')?.touched || addplanForm?.get('libraryId')?.dirty)  }" 
+              >
+                <option value="">Select library</option>
+                @for (library of libraryListArr; track $index) {
+                    <option [value]="library?._id">{{ library?.name }}</option>
+                }
+              </select>
+                @if (addplanForm?.get('libraryId')?.invalid && addplanForm?.get('libraryId')?.touched ) {
+                <div class="text-danger"> Required </div>
+                }
+            </div>
+            <!-- plan name  -->
             <div class="col-md-6 my-2">
                 <label> Plan Name <span class="text-danger">*</span></label>
-                <input formControlName="planName" type="text" class="form-control"
-                    [ngClass]="{'is-invalid':addplanForm?.get('planName')?.invalid && (addplanForm?.get('planName')?.touched || addplanForm?.get('planName')?.dirty)  }" />
-                @if (addplanForm?.get('planName')?.invalid && addplanForm?.get('planName')?.touched ) {
+                <input formControlName="name" type="text" class="form-control" placeholder="Enter plan name"
+                    [ngClass]="{'is-invalid':addplanForm?.get('name')?.invalid && (addplanForm?.get('name')?.touched || addplanForm?.get('name')?.dirty)  }" />
+                @if (addplanForm?.get('name')?.invalid && addplanForm?.get('name')?.touched ) {
                 <div class="text-danger"> Required </div>
                 }
 
             </div>
+            <!-- plan value  -->
             <div class="col-md-6 my-2">
                 <label> Plan Value <span class="text-danger">*</span></label>
-                <input formControlName="planRate" type="text" class="form-control"
-                    [ngClass]="{'is-invalid':addplanForm?.get('planRate')?.invalid && (addplanForm?.get('planRate')?.touched || addplanForm?.get('planRate')?.dirty)  }" />
-                @if (addplanForm?.get('planRate')?.invalid && addplanForm?.get('planRate')?.touched ) {
+                <input formControlName="price" type="text" class="form-control" placeholder="Enter plan value"
+                    [ngClass]="{'is-invalid':addplanForm?.get('price')?.invalid && (addplanForm?.get('price')?.touched || addplanForm?.get('price')?.dirty)  }" />
+                @if (addplanForm?.get('price')?.invalid && addplanForm?.get('price')?.touched ) {
+                <div class="text-danger"> Required </div>
+                }
+
+            </div>
+            <!-- description  -->
+            <div class="col-md-6 my-2">
+                <label> Description </label>
+                <input formControlName="description" type="text" class="form-control" placeholder="Write description"
+                    [ngClass]="{'is-invalid':addplanForm?.get('description')?.invalid && (addplanForm?.get('description')?.touched || addplanForm?.get('description')?.dirty)  }" />
+                @if (addplanForm?.get('description')?.invalid && addplanForm?.get('description')?.touched ) {
                 <div class="text-danger"> Required </div>
                 }
 
@@ -27,12 +54,147 @@
               </div>
 <div class="row">
        <div class="col-md-12 text-end">
-        <button class="btn btn-primary" (click)="savePlanName()" >Save</button>
+       @if (isUpdate) {
+            <button class="btn btn-outline-primary" (click)="saveUpdatePlan()" >Update</button>
+       }
+       @else {
+           <button class="btn btn-primary" (click)="savePlanName()" >Save</button>
+       }
+        
+      
 </div>
 </div>
      </form>
     
   </div>
+</div>
+
+
+<div class="row mt-3">
+  <div class="row"><div class="col-md-12">Active Plans:-</div></div>
+     <div class="userdata-table-wrapper mt-2 d-none d-sm-none d-md-block">
+              <div class="row g-0 position-relative">
+                <div class="col-12">
+                  <div class="table-responsive datatable-contaner table-scroll">
+                    <table
+                      class="table table-striped table-hover align-middle table-fixed no-wrap"
+                    >
+                      <thead class="table_heading sticky-top">
+                        <tr>
+                          @for (list of plan_columns; track $index; let index= $index) {
+
+                                <th [ngClass]="{ activeTab:!plan_columns[index].active, 'text-center':$last}" >
+                                  {{ list?.displayName }}
+                          </th>
+                          }
+                        
+                      
+                        </tr>
+                      </thead>
+                       <tbody>
+
+                        @for (data of associatedPlan; track $index; let i = $index) {
+                            <tr>
+                        
+                            <td
+                              class="planName"
+                              [ngClass]="{
+                                activeTab: !plan_columns[0].active
+                              }"
+                            >
+                             <p class="fw-bold">{{data?.name}}</p>
+                            
+                            </td>
+                            <td
+                              class="price"
+                              [ngClass]="{
+                                activeTab: !plan_columns[1].active
+                              }"
+                            >
+                             <p>{{data?.price}}</p>
+                            </td>
+                            
+                            <td
+                              class="description"
+                              [ngClass]="{
+                                activeTab: !plan_columns[2].active
+                              }"
+                            >
+                             <p>{{data?.description}}</p>
+                            </td>
+                            <td
+                              class="status"
+                              [ngClass]="{
+                                activeTab: !plan_columns[3].active
+                              }"
+                            >
+                                <span class="badge p-2"
+                                            [ngClass]="{'text-bg-success':data?.isActive=='1' ,'text-bg-danger': data?.isActive=='0' }">
+                                 {{ data?.isActive=='1' ? 'Active' : 'Inactive'}}     
+                                 
+                                  </span> 
+                            </td>
+                            <td
+                              class="createdAt"
+                              [ngClass]="{
+                                activeTab: !plan_columns[4].active
+                              }"
+                            >
+                             <p>{{data?.createdAt | formateDate }}</p>
+                            </td>
+                            <td
+                              class="updatedAt"
+                              [ngClass]="{
+                                activeTab: !plan_columns[5].active
+                              }"
+                            >
+                             <p>{{data?.updatedAt | formateDate}}</p>
+                            </td>
+
+                          
+                          
+                            <td
+                              class="action text-center"
+                              [ngClass]="{
+                                activeTab: !plan_columns[6].active
+                              }"
+                            > 
+      
+
+
+ <div class="dropdown">
+  <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+    Action
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+    <li><button class="dropdown-item" type="button" (click)="updatePlan(data, i)" >Update</button></li>
+    <li><button class="dropdown-item" type="button" (click)="openConfirmation(data, i, 'update')">Update Status</button></li> 
+    <li><button class="dropdown-item" type="button" (click)="openConfirmation(data, i, 'delete')">Delete</button></li> 
+
+  </ul>
+</div>
+
+
+
+
+
+
+                            </td>
+                          }
+                          @empty {
+                          <td colspan="7"><p class="text-center my-3">No data found..!</p></td > 
+                           
+                          }
+                       </tbody>
+                      </table>
+                      </div>
+
+
+
+
+
+
+
 </div>
     </div>
   
